3.2.2011
  - Set up subversion. :D

2.24.2011
  - Fixed bug on Unusual hats not coming first in precedence.
  - Fixed CSS bug on signin form, still needs alignment work (maybe padding 0 on the input form?)

2.23.2011
  - First major code push.
  - Categorization of hats/weapons done.
  - Unusual hat lookups done.
  - Metal Maker form done.